--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   </head>
 
   <body>
-    <!-- INI BAGIAN HEADER -->
+    <!-- START HEADER -->
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-success">
-        <a class="navbar-brand font-weight-bold text-white" href="#"
+        <a class="navbar-brand font-weight-bold text-white" href="index.html"
           ><h4>Web Gallery Arya</h4>
         </a>
         <button
@@ -44,8 +44,9 @@
       </nav>
     </header>
 
+    <!-- START MAIN -->
     <main class="mt-3">
-      <!-- INI BAGIAN CAROUSEL -->
+      <!-- START CAROUSEL -->
       <section id="slider" class="container-fluid">
         <div
           id="carouselExampleIndicators"
@@ -105,6 +106,7 @@
         </div>
       </section>
 
+      <!-- START IMAGE GALLERY -->
       <section>
         <div class="container mt-5">
           <div class="gallery-container w-3 h-2">
@@ -230,7 +232,7 @@
       </section>
     </main>
 
-    <!-- INI BAGIAN FOOTER -->
+    <!-- START FOOTER -->
     <footer class="page-footer font-small blue bg-success mt-5">
       <div
         class="footer-copyright text-center py-3 font-weight-bold text-white"
